--- a/bin-clock.htm
+++ b/bin-clock.htm
@@ -13,45 +13,44 @@
     <div id="clock-outer">
         <div id="hours" class="container">
             <div class="column">
-                <div id="hour10" class="block">hours 10</div>
-                <div id="hour20" class="block">hours 20</div>
+                <div id="hour10" class="block"></div>
+                <div id="hour20" class="block"></div>
             </div>
             <div class="column">
-                <div id="hour1" class="block">hours 1</div>
-                <div id="hour2" class="block">hours 2</div>
-                <div id="hour4" class="block">hours 4</div>
-                <div id="hour8" class="block">hours 8</div>
+                <div id="hour1" class="block"></div>
+                <div id="hour2" class="block"></div>
+                <div id="hour4" class="block"></div>
+                <div id="hour8" class="block"></div>
             </div>
         </div>
         <div id="minutes" class="container">
             <div class="column">
-                <div id="min10" class="block">mins 10</div>
-                <div id="min20" class="block">mins 20</div>
-                <div id="min40" class="block">mins 40</div>
+                <div id="min10" class="block"></div>
+                <div id="min20" class="block"></div>
+                <div id="min40" class="block"></div>
             </div>
             <div class="column">
-                <div id="min1" class="block">mins 1</div>
-                <div id="min2" class="block">mins 2</div>
-                <div id="min4" class="block">mins 4</div>
-                <div id="min8" class="block">mins 8</div>
+                <div id="min1" class="block"></div>
+                <div id="min2" class="block"></div>
+                <div id="min4" class="block"></div>
+                <div id="min8" class="block"></div>
             </div>
         </div>
         <div id="seconds" class="container">
             <div class="column">
-                <div id="sec10" class="block">secs 10</div>
-                <div id="sec20" class="block">secs 20</div>
-                <div id="sec40" class="block">secs 40</div>
+                <div id="sec10" class="block"></div>
+                <div id="sec20" class="block"></div>
+                <div id="sec40" class="block"></div>
             </div>
             
             <div class="column">
-                <div id="sec1" class="block">secs 1</div>
-                <div id="sec2" class="block">secs 2</div>
-                <div id="sec4" class="block">secs 4</div>
-                <div id="sec8" class="block">secs 8</div>
+                <div id="sec1" class="block"></div>
+                <div id="sec2" class="block"></div>
+                <div id="sec4" class="block"></div>
+                <div id="sec8" class="block"></div>
             </div>
         </div>
     </div>
-    <script>const seconds1 = document.getElementById("sec1");
-        seconds1.style.backgroundColor = "#00FF00";</script>
+    <script src="bin-clock.js"></script>
 </body>
 </html>
